# siepic-forge

./: .gitignore  CHANGELOG.md  README.md  component_converter.py  extrusion_profile.py  layer_converter.py  make_pda_library.py  pyproject.toml  siepic-forge.tok  ui_generator.py  waveguide_converter.py
.github/workflows/: build-packages.yml  run-tests.yml
si/: README.md  make_pda_library.py  pyproject.toml
si/siepic_forge/: __init__.py  _component_data.py  _layers.py  component.py  technology.py
si/siepic_si_forge/: __init__.py  component.py
si/tests/: components_test.py  technology_test.py  version_test.py
siepic_forge/: __init__.py  _layers.py  _ui_.py  component.py  technology.py
sin/: README.md  make_pda_library.py  pyproject.toml
sin/siepic_sin_forge/: __init__.py  _component_data.py  _layers.py  component.py  technology.py
sin/tests/: components_test.py  technology_test.py  version_test.py
tests/: components_test.py  technology_test.py  ui_test.py  version_test.py
