[project]
name = "siepic-forge"
version = "0.7.0"
authors = [{name = "Flexcompute Inc.", email = "info@flexcompute.com"}]
description = ""
readme = "README.md"
dependencies = ["photonforge >= 0.7.0"]

[project.optional-dependencies]
dev = ["pytest >= 7.2", "ipykernel >= 6.10", "ipywidgets >= 8.0"]

[tool.setuptools]
packages = ["siepic_forge"]

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools >= 45"]
build-backend = "setuptools.build_meta"
