[project]
name = "siepic-forge"
version = "0.9.0"
authors = [{name = "Flexcompute Inc.", email = "info@flexcompute.com"}]
description = ""
readme = "README.md"
dependencies = ["photonforge ~= 1.0.0rc1"]

[project.optional-dependencies]
test = ["pytest >= 7.2"]

[tool.setuptools]
packages = ["siepic_forge"]

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools >= 45"]
build-backend = "setuptools.build_meta"
